tests/tooling/fixtures/native/execution/negative/nil_literal_global_divide_by_zero.objc3
module NilLiteralGlobalDivideByZero;

let seed = nil / 0;

fn main() -> i32 {
  return seed;
}
